--- a/front-end/Web-App/src/app/posts/post-create/post-create.component.html
+++ b/front-end/Web-App/src/app/posts/post-create/post-create.component.html
@@ -1,12 +1,11 @@
 <mat-card>
   <mat-form-field>
-    <textarea matInput rows="6" [(ngModel)]="enteredValue"></textarea>
+    <input matInput type="text" [(ngModel)]="enteredTitle" />
   </mat-form-field>
-  <button mat-raised-button color="primar y" (click)="onAddPost()">
+  <mat-form-field>
+    <textarea matInput rows="6" [(ngModel)]="enteredContent"></textarea>
+  </mat-form-field>
+  <button mat-raised-button color="primary" (click)="onAddPost()">
     Save post
   </button>
 </mat-card>
-
-<hr />
-
-<p>{{ newPost }}</p>
